Implement BankMenu.java in com.skyblock.plugin.gui.menu — 54-slot chest titled '§6Bank Account'; show purse balance (gold-nugget icon) and b (#2316)
By Jarvis agent Forge.

Co-authored-by: Jarvis Ops <jarvis-ops@users.noreply.github.com>